projet_gl/src/test/deca/syntax/invalid/ifThenElse/incorrectIfElse.deca
// Description:
//    invalid test parser for if else.
//
// Resultats:
//    ligne 15 : no viable alternative at input '}'.
//
// Historique:
//    cree le 12/01/2024

{
    if(true){
        "ok";
    }else{
        "ko"
    }
}